...
                    Spacer()
                    
                    Text(viewModel.wifiNetwork?.ssid ?? "Not Selected")
                        .foregroundColor(.secondary)
                }
            }
            .accessibilityIdentifier("access_point_selector")
            
            if let wifi = viewModel.wifiNetwork {
                additionalInfo(wifi)
                
                SecureField("Password", text: $viewModel.password)
            }
...
                    Text("Volatile Memory")
                    
                    Spacer()
                    
                    Toggle("", isOn: $viewModel.volatileMemory)
                        .toggleStyle(SwitchToggleStyle(tint: .nordicBlue))
                        .accessibilityIdentifier("volatile_memory_toggle")
                }
            }
        } header: {
            Text("Access Point")
        } footer: {
            Text(viewModel.infoFooter)
...
