...
                    .accessibilityIdentifier("accid")
                }
            } header: {
                Text("Select Channel")
            }
        }
        .accessibilityIdentifier("channel_picker")
        .navigationTitle(selectedChannel ?? "Channel")
    }
}

#if DEBUG
struct ChannelPicker_Previews: PreviewProvider {
...
